registration link. mazurek abstract

--- a/index.html
+++ b/index.html
@@ -102,7 +102,13 @@
 
  <div class="interior row">
    <h2>Schedule</h2>
-   <p> All times are displayed in US Pacific Time (UTC-8) </p>
+   <p> All times are displayed in <b>US Pacific Time (UTC-7)</b>
+
+     <br/> The events will be broadcast live on YouTube (link to be
+     provided here), although participants are encouraged to register
+     to more closely engage with speakers and the community.
+   
+   </p>
 
   <ul style="padding-left:2em">
 
@@ -136,7 +142,8 @@
 
   <li style="margin-bottom: 1ex;"><b>Wednesday, December 16: 10am -- 11:30am </b>
     <ul style="padding-left:2em">
-      <li><a href="http://users.umiacs.umd.edu/~mmazurek/">Michelle Mazurek</a> (University of Maryland) on Human-centered Secure Development</li>
+      <li><a href="http://users.umiacs.umd.edu/~mmazurek/">Michelle Mazurek</a> (University of Maryland)
+        on <a href="mazurek.html">Human-centered Secure Development</a></li>
     </ul>
   </li>
 
@@ -149,8 +156,19 @@
 <div class="content">
 
  <div class="interior row">
-  <h2>Registration</h2><hr />
+   <h2>Registration</h2><hr />
+
+   <p align="justify">
+     Registration is optional and free, but strongly
+     encouraged. Registered participants will be able to join
+     live discussion and breakout sessions.
+
+     Please register here: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR62FGVB7KARFmSJalTAo7I1UMlFFNjlTQzRKTElFUUo0RkFaNkRSNlFSVS4u">Registration link</a>
+     
+   </p>     
  </div>
+
+ 
 
 </div>
 </div>
