--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <div class="foot-wrap"> <div id="footer"></div> </div>
 
 <script>
-var pages = ["introduction","download","tutorial","support","people","papers","talks"];
+var pages = ["introduction","schedule","registration","organizers"];
 var olde = 0;
 $(document).ready(function() {
   var navpos = $('#hdr').offset();
