--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 <!<-- INTRODUCTION -->
 <div class="content-wrap" data-scroll-index="0">
-<div class="content" style="height:900px;">
+<div class="content">
  <div class="interior row">
   <h2>Introduction</h2>
   <hr />
@@ -98,7 +98,7 @@
 
 <!-- Section -->
 <div class="content-wrap alt" data-scroll-index="1">
-<div class="content" style="height:500px;">
+<div class="content">
 
  <div class="interior row">
    <h2>Schedule</h2>
@@ -152,7 +152,7 @@
 </div>
 
 <!-- Section -->
-<div class="content-wrap" data-scroll-index="2" style="margin-top:0px;">
+<div class="content-wrap" data-scroll-index="2">
 <div class="content">
 
  <div class="interior row">
@@ -175,10 +175,8 @@
 
 <!-- Section -->
 <div class="content-wrap alt" data-scroll-index="3">
-<div class="content" style="height:330px;">
- <div class="interior row">
+<div class="content">
    <h2>Organizers & Steering Committee</h2><hr />
-    <div style="float:left; width:20em">
       <ul style="padding-left:2em; margin:0px 0px 0px 0px">
           <li><a href="https://research.google/people/abadi/">Martin Abadi</a>, Google</li>
           <li><a href="https://www.nsf.gov/staff/staff_bio.jsp?lanId=abanerje">Anindya Banerjee</a>, NSF</li>
@@ -192,8 +190,6 @@
           <li><a href="https://www.microsoft.com/en-us/research/people/dtarditi/">David Tarditi</a>, Microsoft (Vice chair)</li>
           <li><a href="https://www.veracode.com/blog/author/chris-wysopal">Chris Wysopal</a>, Veracode</p>
       </ul>
-    </div>
- </div>
 </div>
 </div>
 
