--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
    <li><a data-scroll-nav="1">Schedule</a></li>
    <li><a data-scroll-nav="2">Registration</a></li>
    <li><a data-scroll-nav="3">Organizers</a></li>
+   <li><a data-scroll-nav="4">Sponsors</a></li>   
  </ul>
  </div>
 </div>
@@ -193,12 +194,25 @@
 </div>
 </div>
 
+<!-- Section -->
+<div class="content-wrap" data-scroll-index="4">
+<div class="content">
+  <h2>Sponsors</h2><hr />
+
+  DS3 is sponsored in 2020-21 by generous support from
+  from <a href="https://www.microsoft.com/en-us/research/">Microsoft
+  Research</a>
+  and <a href="https://azure.microsoft.com/en-us/services/azure-sphere/">Microsoft
+  Azure Sphere</a>.
+  
+</div>
+</div>
 
 <!-- Footers -->
 <div class="foot-wrap"> <div id="footer"></div> </div>
 
 <script>
-var pages = ["introduction","schedule","registration","organizers"];
+var pages = ["introduction","schedule","registration","organizers","sponsors"];
 var olde = 0;
 $(document).ready(function() {
   var navpos = $('#hdr').offset();
