--- a/index.html
+++ b/index.html
@@ -209,7 +209,11 @@
 </div>
 
 <!-- Footers -->
-<div class="foot-wrap"> <div id="footer"></div> </div>
+<div class="foot-wrap">
+  <div id="footer">
+    Thanks to Antoine Delignat-Lavaud, from whom this webpage style is borrowed.
+  </div>
+</div>
 
 <script>
 var pages = ["introduction","schedule","registration","organizers","sponsors"];
