link to youtube channel

--- a/index.html
+++ b/index.html
@@ -105,9 +105,10 @@
    <h2>Schedule</h2>
    <p> All times are displayed in <b>US Pacific Time (UTC-7)</b>
 
-     <br/> The events will be broadcast live on YouTube (link to be
-     provided here), although participants are encouraged to register
-     to more closely engage with speakers and the community.
+     <br/> The events will be broadcast live on
+     this <a href="https://www.youtube.com/channel/UCwecec8CWSDpt2QExovo1tA">YouTube
+     channel</a>, although participants are encouraged to register to
+     more closely engage with speakers and the community.
    
    </p>
 
