--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
 <body>
 
-<div id="nav">
-  <br>  <br>  <br>
-  <h1> Developing Secure Systems Summit (DS3) </h1>
-  <br>  <br>  <br>
+  <div id="nav">
+    <div style="background-image: url('https://www.microsoft.com/en-us/research/uploads/prod/2020/06/DS3_1920x720_v2-1920x720.jpg'"/>
+     <br>     <br>     <br>
+     <h1><font color='white'>Developing Secure Systems Summit (DS3)</font></h1>
+     <br>     <br>     <br>     
+  </div>
  <div id="hdr">
  <ul>
    <li class="active"><a data-scroll-nav="0">Introduction</a></li>
