local image file

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <div id="nav">
-    <div style="background-image: url('https://www.microsoft.com/en-us/research/uploads/prod/2020/06/DS3_1920x720_v2-1920x720.jpg'"/>
+    <div style="background-image: url('./DS3_1920x720_v2-1920x720.jpg'"/>
      <br>     <br>     <br>
      <h1><font color='white'>Developing Secure Systems Summit (DS3)</font></h1>
      <br>     <br>     <br>     
