--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
      encouraged. Registered participants will be able to join
      live discussion and breakout sessions.
 
-     Please register here: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR62FGVB7KARFmSJalTAo7I1UMlFFNjlTQzRKTElFUUo0RkFaNkRSNlFSVS4u">Registration link</a>
+     Please register here: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR62FGVB7KARFmSJalTAo7I1UMlFFNjlTQzRKTElFUUo0RkFaNkRSNlFSVS4u">Registration link</a>. After completing the registration form, we will send you by email (by November 18) a link to join online meetings and discussions.
      
    </p>     
  </div>
