--- a/ds3-cfp.html
+++ b/ds3-cfp.html
@@ -58,7 +58,7 @@ For this year, we had initially envisioned a 2-day event hosted at
 Microsoft in Redmond. However, in light of the global pandemic we are
 aiming instead to first build an online community centered around a
 series of virtual seminars, drawing inspiration from several
-successful virtual events in the past months.   SCHEDULE
+successful virtual events in the past months.
 <br><br>
 We are announcing now a first round of 7 invited speakers. We will
 announce additional events (e.g., breakout sessions and tutorials)
@@ -108,7 +108,3 @@ will be available on our website.
 </div>
 </body>
 </html>
-
---------------------------------------------------------------------------------
-Organizers and Steering Committee
---------------------------------------------------------------------------------
