--- a/ds3-cfp.html
+++ b/ds3-cfp.html
@@ -85,7 +85,7 @@ will be available on our website.
        </ul>
   </li>
 
-  <li> 4. <a href="http://pages.cs.wisc.edu/~jha/">Somesh Jha</a> (December 9, 9am--1030am) </li>
+  <li> 4. <a href="http://pages.cs.wisc.edu/~jha/">Somesh Jha</a>, University of Wisconsin (December 9, 9am--1030am) </li>
 
   <li> 5. <a href="http://users.umiacs.umd.edu/~mmazurek/">Michelle Mazurek</a>, University of Maryland (December 16, 10am--1130am) </li>
 </ul>
