fix html cfp timezone

--- a/ds3-cfp.html
+++ b/ds3-cfp.html
@@ -68,7 +68,7 @@ Spring 2021.
 
 <h2>Schedule</h2>
 
-All in Pacific Time (UTC-7). A full program with titles and abstracts
+All in Pacific Standard Time (UTC-8). A full program with titles and abstracts
 will be available on our website.
 
 <ul>
