adding brad martin

--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
           <li><a href="https://cryptocity.net/">Dan Guido</a>, Trail of Bits</li>
           <li><a href="http://www.cs.umd.edu/~mwh/">Michael Hicks</a>, University of Maryland (Vice chair)</li>
           <li><a href="https://pages.lip6.fr/Julia.Lawall/">Julia Lawall</a>, INRIA</li>
+          <li><a href="https://cps-vo.org/users/bradmartin">William "Brad" Martin</a>, NSA</li>
           <li><a href="https://nebelwelt.net/">Mathias Payer</a>, EPFL</li>
           <li><a href="https://www.comp.nus.edu.sg/~prateeks/">Prateek Saxena</a>, NUS</li>
           <li><a href="https://www.microsoft.com/en-us/research/people/nswamy/">Nikhil Swamy</a>, Microsoft Research (Chair)</li>
