--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
 
 <!-- Section -->
 <div class="content-wrap alt" data-scroll-index="3">
-<div class="content">
+  <div class="content">
+    <div class="interior row">
    <h2>Organizers & Steering Committee</h2><hr />
       <ul style="padding-left:2em; margin:0px 0px 0px 0px">
           <li><a href="https://research.google/people/abadi/">Martin Abadi</a>, Google</li>
@@ -196,7 +197,8 @@
           <li><a href="https://www.microsoft.com/en-us/research/people/nswamy/">Nikhil Swamy</a>, Microsoft Research (Chair)</li>
           <li><a href="https://www.microsoft.com/en-us/research/people/dtarditi/">David Tarditi</a>, Microsoft (Vice chair)</li>
           <li><a href="https://www.veracode.com/blog/author/chris-wysopal">Chris Wysopal</a>, Veracode</p>
-      </ul>
+     </ul>
+</div>
 </div>
 </div>
 
@@ -216,7 +218,8 @@
 
 <!-- Section -->
 <div class="content-wrap alt" data-scroll-index="5">
-<div class="content">
+  <div class="content">
+    <div class="interior row">    
   <h2>Code of Conduct</h2><hr />
 
 Microsoft’s mission is to empower every person and every organization
@@ -237,7 +240,8 @@ behavior, or suspicious or disruptive activity to venue staff, the
 event host or owner, or event staff. Microsoft reserves the right to
 refuse admittance to or remove any person from company-sponsored
 events at any time in its sole discretion.
-</div>
+    </div>
+    </div>
 </div>
 
 <!-- Footers -->
