adding galen abstract

--- a/ds3-cfp.html
+++ b/ds3-cfp.html
@@ -74,7 +74,7 @@ will be available on our website.
 <ul>
   <li> 1. <a href="https://www.microsoft.com/en-us/research/people/galenh/">Galen Hunt</a>, Microsoft (November 18, 9am--1030am) </li>
 
-  <li> 2. <a href="https://www.vusec.net/people/herbert-bos/">Herbert Bos</a>, Vrije Universiteit Amsterdam (TBD) </li>
+  <li> 2. <a href="https://www.vusec.net/people/herbert-bos/">Herbert Bos</a>, Vrije Universiteit Amsterdam (December 1, 9am--1030am) </li>
 
   <li> 3. Web Security Talks and Panel (December 2, 9am--1030am)<br>
        Featuring <br>
@@ -99,6 +99,7 @@ will be available on our website.
           <li><a href="https://cryptocity.net/">Dan Guido</a>, Trail of Bits</li>
           <li><a href="http://www.cs.umd.edu/~mwh/">Michael Hicks</a>, University of Maryland (Vice chair)</li>
           <li><a href="https://pages.lip6.fr/Julia.Lawall/">Julia Lawall</a>, INRIA</li>
+          <li><a href="https://cps-vo.org/users/bradmartin">William "Brad" Martin</a>, NSA</li>
           <li><a href="https://nebelwelt.net/">Mathias Payer</a>, EPFL</li>
           <li><a href="https://www.comp.nus.edu.sg/~prateeks/">Prateek Saxena</a>, NUS</li>
           <li><a href="https://www.microsoft.com/en-us/research/people/nswamy/">Nikhil Swamy</a>, Microsoft Research (Chair)</li>
