--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
 
   <li style="margin-bottom: 1ex;"><b id="Schedule:Week1"></b>
     <ul style="padding-left:2em">
-      <li><a href="https://www.microsoft.com/en-us/research/people/galenh/">Galen Hunt</a> (Microsoft) on IoT Security</li>
+      <li><a href="https://www.microsoft.com/en-us/research/people/galenh/">Galen Hunt</a> (Microsoft) on
+               <a href="hunt.html">Creating Secure IoT Devices</a></li>
     </ul>
   </li>
 
