--- a/hunt.html
+++ b/hunt.html
@@ -12,7 +12,7 @@
   Creating Secure IoT Devices
 </h1>
 
-<b>Speaker: <a href="http://users.umiacs.umd.edu/~mmazurek/">Michelle Mazurek</a></b>
+<b>Speaker: <a href="https://www.microsoft.com/en-us/research/people/galenh/">Galen Hunt</a></b>
 <br><br>
 
 Dr. Galen Hunt founded and leads the Microsoft team responsible for
