rossberg and reis

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
   <li style="margin-bottom: 1ex;"><b id="Schedule:Week3"></b>
      <br> Web Security Panel </br>
     <ul style="padding-left:2em">
-      <li><a href="http://asirap.net/">Parisa Tabriz</a> (Google) on Browser Security </li>
-      <li><a href="https://people.mpi-sws.org/~rossberg/">Andreas Rossberg</a> (Dfinity) on Web Assembly </li>
+      <li><a href="http://www.charlesreis.com/">Charlie Reis</a> (Google) on Chrome Browser Security </li>
+      <li><a href="https://people.mpi-sws.org/~rossberg/">Andreas Rossberg</a> (Dfinity) on <a href="rossberg.html">Security through Modularity in Web Assembly</a> </li>
       <li><a href="https://www.doc.ic.ac.uk/~livshits/">Ben Livshits</a> (Imperial College and Brave) on Browser Privacy </li>            
     </ul>
   </li>
