--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 
   <li style="margin-bottom: 1ex;"><b id="Schedule:Week2"></b>
     <ul style="padding-left:2em">
-      <li><a href="https://www.vusec.net/people/herbert-bos/">Herbert Bos</a> (VU Amsterdam) on Systems Security</li>
+      <li><a href="https://www.vusec.net/people/herbert-bos/">Herbert Bos</a> (VU Amsterdam): <a href="bos.html">Your Threat Model Is Bad and You Should Feel Bad</a></li>
     </ul>
   </li>
 
   <li style="margin-bottom: 1ex;"><b id="Schedule:Week3"></b>
      <br> Web Security Panel </br>
     <ul style="padding-left:2em">
-      <li><a href="http://www.charlesreis.com/">Charlie Reis</a> (Google) on Chrome Browser Security </li>
+      <li><a href="http://www.charlesreis.com/">Charlie Reis</a> (Google) on <a href="reis.html">Improving Chrome's Security Architecture</a></li>
       <li><a href="https://people.mpi-sws.org/~rossberg/">Andreas Rossberg</a> (Dfinity) on <a href="rossberg.html">Security through Modularity in Web Assembly</a> </li>
       <li><a href="https://www.doc.ic.ac.uk/~livshits/">Ben Livshits</a> (Imperial College and Brave) on Browser Privacy </li>            
     </ul>
