--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
      encouraged. Registered participants will be able to join
      live discussion and breakout sessions.
 
-     Please register here: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR62FGVB7KARFmSJalTAo7I1UMlFFNjlTQzRKTElFUUo0RkFaNkRSNlFSVS4u">Registration link</a>. After completing the registration form, we will send you by email (by November 18) a link to join online meetings and discussions.
+     Please register here: <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=v4j5cvGGr0GRqy180BHbR62FGVB7KARFmSJalTAo7I1UMlFFNjlTQzRKTElFUUo0RkFaNkRSNlFSVS4u">Registration link</a>. After completing the registration form, we will send you within a few business days an email with a link to join online meetings and discussions. If you register at the last minute and don't receive a link in time, that's okay, you can still participate via YouTube.
      
    </p>     
  </div>
