--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <ul style="padding-left:2em">
       <li><a href="http://www.charlesreis.com/">Charlie Reis</a> (Google) on <a href="reis.html">Improving Chrome's Security Architecture</a></li>
       <li><a href="https://people.mpi-sws.org/~rossberg/">Andreas Rossberg</a> (Dfinity) on <a href="rossberg.html">Security through Modularity in Web Assembly</a> </li>
-      <li><a href="https://www.doc.ic.ac.uk/~livshits/">Ben Livshits</a> (Imperial College and Brave) on Browser Privacy </li>            
+      <li><a href="https://www.doc.ic.ac.uk/~livshits/">Ben Livshits</a> (Imperial College and Brave) on <a href="livshits.html">Web Privacy for the Masses: Research-driven Privacy Features in Brave</a> </li>            
     </ul>
   </li>
 
