--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
   <li style="margin-bottom: 1ex;"><b id="Schedule:Week4"></b>
     <ul style="padding-left:2em">
-      <li><a href="http://pages.cs.wisc.edu/~jha/">Somesh Jha</a> (University of Wisconsin) on Trustworthy Machine Learning</li>
+      <li><a href="http://pages.cs.wisc.edu/~jha/">Somesh Jha</a> (University of Wisconsin) on <a href="jha.html">Trustworthy Machine Learning</a></li>
     </ul>
   </li>
 
