--- a/index.html
+++ b/index.html
@@ -70,12 +70,9 @@
    Additionally, we hope to interest others whose works are
    underrepresented at existing venues.
    <br />   <br />
-   <b>DS3 in 2020:</b> For this year, we had initially envisioned a
-    2-day event hosted at Microsoft in Redmond. However, in light of
-    the global pandemic we are aiming instead to first build an online
-    community centered around a series of virtual seminars, drawing
-    inspiration from several successful virtual events in the past
-    months. 
+   <b>DS3 in 2021:</b> Following our online speaker series in the Fall
+   of 2020, we are announcing a new series for events for the Spring
+   of 2021. Please see below for the schedule of events.
 
     Our online seminars will feature presentations from invited
     speakers covering a broad range of topics, including but not
