fix title of panel

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   <ul style="padding-left:2em">
 
   <li style="margin-bottom: 1ex;"><b id="Schedule:Spring:Week1"></b>
-    <br><b>Panel on Cybersecurity Initiatives by the US Government:</b>
+    <br><b>Panel on U.S. Government perspectives on developing secure systems: challenges and opportunities</b>
     <ul style="padding-left:2em">
       <li><a href="https://www.darpa.mil/staff/dr-william-scherlis">William Scherlis</a>, Director, DARPA I20</li>
       <li>Neal Ziring, Technical Director, National Security Agency's Cybersecurity Directorate</li>
