--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
     <br><b>Panel on U.S. Government perspectives on developing secure systems: challenges and opportunities</b>
     <ul style="padding-left:2em">
       <li><a href="https://www.darpa.mil/staff/dr-william-scherlis">William Scherlis</a>, Director, DARPA I20</li>
-      <li>Neal Ziring, Technical Director, National Security Agency's Cybersecurity Directorate</li>
-      <li>Col. Brian K. Beachkofski, Commander, AFLCMC, Detachment 12 (Kessel Run)</li>
+      <li><a href="https://www.linkedin.com/in/neal-ziring-779890a9">Neal Ziring</a>, Technical Director, National Security Agency's Cybersecurity Directorate</li>
+      <li><a href="https://kesselrun.af.mil/mission/">Col. Brian K. Beachkofski, Commander, AFLCMC, Detachment 12 (Kessel Run)</a></li>
     </ul>
   </li>
 
