--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 <div class="content-wrap" data-scroll-index="0">
 <div class="content">
  <div class="interior row">
+  <h3>Next event: <a href="fuzzing-May5.html">Panel on Software Fuzzing</a>
+    <br/> <a href="https://aka.ms/DS3Summit">Live on YouTube</a> at <b id="Schedule:Spring:Week4"></b></h3>
+
   <h2>Introduction</h2>
   <hr />
+
   <p align="justify">
    The state of the art in developing secure computer systems is
    advancing rapidly, with progress in several communities around the
