--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div class="content">
  <div class="interior row">
   <h3>Next event: <a href="fuzzing-May5.html">Panel on Software Fuzzing</a>
-    <br/> <a href="https://aka.ms/DS3Summit">Live on YouTube</a> at <b id="Schedule:Spring:Week4"></b></h3>
+    <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week4"></b></h3>
 
   <h2>Introduction</h2>
   <hr />
