--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 <div class="content-wrap" data-scroll-index="0">
 <div class="content">
  <div class="interior row">
-  <h3>Next event: <a href="fuzzing-May5.html">Panel on Software Fuzzing</a>
-    <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week4"></b></h3>
+   <h3>Next event: Seminar by <a href="http://www.cs.tufts.edu/~kfisher/Kathleen_Fisher/Home.html">Kathleen Fisher</a><br/>
+     <a href="fisher-May19.html">High-Assurance Input Validation: Locking the Front Door</a>
+    <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week5"></b></h3>
 
   <h2>Introduction</h2>
   <hr />
