--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
  <div class="interior row">
    <h3>Next event: Seminar by <a href="https://www.linuxfoundation.org/en/about/fellows/#member-3519-info">Greg Kroah-Hartman</a><br/>
      <a href="kroah-hartman-June2.html">Non-technical issues in providing good security practices in an open source project</a>
-    <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week6Hdr"></b></h3>
+     <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week6Hdr"></b>
+     <br/> <a  data-scroll-nav="2">Optional registration to join on Teams</a></h3>
 
   <h2>Introduction</h2>
   <hr />
