--- a/kroah-hartman-June2.html
+++ b/kroah-hartman-June2.html
@@ -28,7 +28,9 @@ Greg is an adviser to Oregon State University’s Open Source Lab and a member o
         project.  This talk will cover a number of things that the Linux
         kernel security team has had to do in order to help make the
         process of handling security issues and getting the fixes out to
-        users quickly and safely.
+       users quickly and safely.
+<br/><br/>
+<b><a href="gregkh_non-tech-security.pdf">Slides</a></b>
 </div>
 </center>
 </body>
