--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 <div class="content-wrap" data-scroll-index="0">
 <div class="content">
  <div class="interior row">
-   <h3>Next event: Seminar by Shaz Qadeer<br/>
-     On the Diem blockchain and the Move programming platfor
+   <h3>Next event: <a href="qadeer-June30.html">Seminar by Shaz Qadeer</a><br/>
+     Move: Language, Bytecode Verifier, Prover
      <br/> <a href="https://aka.ms/DS3YouTube">Live on YouTube</a> at <b id="Schedule:Spring:Week8Hdr"></b>
      <br/> <a  data-scroll-nav="2">Optional registration to join on Teams</a></h3>
 
